[tool.poetry]
name = "vectorisation"
version = "0.1.0"
description = ""
authors = ["Merwane Bouri <merwane.bouri@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.24.2"
scipy = "^1.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
